hphp/test/slow/unset/1107.php.expectf
Fatal error: Uncaught exception 'UndefinedVariableException' with message 'Undefined variable: a' in %s/unset/1107.php:5
Stack trace:
%A
